--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ body {
 
 @media (max-width: 650px) {
     body {
-        background-color: #ffffff;
+        background-color: #000000;
     }
 
     .instagram-wrapper {
